--- a/analysis/manuscript.tex
+++ b/analysis/manuscript.tex
@@ -61,7 +61,7 @@ najko.jahn@sub.uni-goettingen.de
 
 For over two decades, hybrid open access journal publishing, which makes
 some articles openly available while others remain behind a paywall, has
-been discussed as a model for transitioning the subscription system to
+been discussed as a means for transitioning the subscription system to
 full open access (Prosser, 2003). The idea was that when journals
 increasingly publish open access articles, they could reduce revenues
 from subscriptions, while libraries and funders could change their
