--- a/analysis/references.bib
+++ b/analysis/references.bib
@@ -112,6 +112,8 @@ abstract = {{The SOAP (Study of Open Access Publishing) project has compiled dat
 
 @article{Pinhasi_2020, title={The impact of open access publishing agreements at the {University of Vienna} in light of the Plan S requirements: a review of current status, challenges and perspectives}, volume={33}, ISSN={2048-7754}, url={http://dx.doi.org/10.1629/uksg.523}, DOI={10.1629/uksg.523}, journal={Insights the UKSG journal}, publisher={Ubiquity Press, Ltd.}, author={Pinhasi, Rita and Kromp, Brigitte and Blechl, Guido and Hölbling, Lothar}, year={2020} }
 
+@article{Pinhasi_2021, title={Austrian Transition to Open Access: a collaborative approach}, volume={34}, ISSN={2048-7754}, url={http://dx.doi.org/10.1629/uksg.561}, DOI={10.1629/uksg.561}, journal={Insights the UKSG journal}, publisher={Ubiquity Press, Ltd.}, author={Pinhasi, Rita and Hölbling, Lothar and Kromp, Brigitte}, year={2021} }
+
 @misc{Brainard_2023, DOI={10.1126/science.adj3282}, author = {Jeffery Brainard}, journal={Science: SCIENCEINSIDER}, year={2023}, title = {‘Transformative’ journals get booted for switching to open access too slowly} }
 
 @article{Moskovkin_2022, title={Transformative agreements in the development of open access}, volume={34}, ISSN={1941-1278}, url={http://dx.doi.org/10.1080/1941126X.2022.2099000}, DOI={10.1080/1941126x.2022.2099000}, number={3}, journal={Journal of Electronic Resources Librarianship}, publisher={Informa UK Limited}, author={Moskovkin, Vladimir M. and Saprykina, Tatyana V. and Boichuk, Igor V.}, year={2022}, month=jul, pages={165–207} }
